kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgp-proofs
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
